set flex auto to prevent squashing radio in ie11 and safari

--- a/src/scss/components/_radios.scss
+++ b/src/scss/components/_radios.scss
@@ -23,6 +23,7 @@
   }
 
   &:before {
+    flex: 0 0 auto;
     content: '';
     display: block;
     height: 1rem;
